--- a/Order.html
+++ b/Order.html
@@ -62,62 +62,59 @@
 <section class="container-fluid">
 
    <div class="row " id="grid" >
-       <div class="row"><h3 id="grid03Top">Invoice</h3></div>
-       <div class="row">
+       <div class="col-md-12" style="margin: 10px" id="firstRow">
+           <div class="row"><h3 id="grid03Top">Invoice</h3></div>
+           <div class="row">
+               <form class="row input-group-sm" style="font-size: x-small">
+                   <div class="col-md-4">
+                       <label for="inputOrderId" class="form-label">Order ID :</label>
+                       <input type="text" class="form-control" id="inputOrderId" placeholder="O001">
+                   </div>
+                   <div class="col-md-4">
+                       <label for="inputCustomer" class="form-label">Customer :</label>
+                       <select id="inputCustomer" class="form-select" >
+                           <option selected>Choose-1</option>
+                           <option>Choose-2</option>
+                       </select>
+                   </div>
 
-           <form class="row g-3" style="font-size: x-small">
-               <div class="col-md-4">
-                   <label for="inputOrderId" class="form-label">Order ID :</label>
-                   <input type="text" class="form-control" id="inputOrderId">
-               </div>
-               <div class="col-md-4">
-                   <label for="inputCustomer" class="form-label">Customer :</label>
-                   <select id="inputCustomer" class="form-select">
-                       <option selected>Choose-1</option>
-                       <option>Choose-2</option>
-                   </select>
-               </div>
+                   <div class="col-md-4">
+                       <label for="1" class="form-label">Customer ID :</label>
+                       <input type="text" class="form-control" id="1" placeholder="C001">
+                   </div>
 
-               <div class="col-md-4">
-                   <label for="1" class="form-label">Customer ID :</label>
-                   <input type="text" class="form-control" id="1">
-               </div>
+                   <div class="col-3">
+                       <label for="inputDate" class="form-label">Date :</label>
+                       <input type="date" class="form-control" id="inputDate">
+                   </div>
 
-               <div class="col-3">
-                   <label for="inputDate" class="form-label">Date :</label>
-                   <input type="date" class="form-control" id="inputDate">
-               </div>
+                   <div class="col-5">
+                       <label for="inputName" class="form-label">Name :</label>
+                       <input type="text" class="form-control" id="inputName" placeholder="Full Name">
+                   </div>
 
-               <div class="col-5">
-                   <label for="inputName" class="form-label">Name :</label>
-                   <input type="text" class="form-control" id="inputName" placeholder="Full Name">
-               </div>
+                   <div class="col-md-4">
+                       <label for="inputSalary" class="form-label">Salary :</label>
+                       <input type="text" class="form-control" id="inputSalary" placeholder="12345.00">
+                   </div>
 
-               <div class="col-md-4">
-                   <label for="inputSalary" class="form-label">Salary :</label>
-                   <input type="text" class="form-control" id="inputSalary">
-               </div>
+                   <div class="col-12">
+                       <label for="inputAddress" class="form-label">Address</label>
+                       <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                   </div>
 
-               <div class="col-12">
-                   <label for="inputAddress" class="form-label">Address</label>
-                   <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-               </div>
-
-           </form>
+               </form>
+           </div>
        </div>
-
-
-
    </div>
 
-    <br>
+
 
    <div class="row" >
-
-       <div class="col-md-6" >
+       <div class="col-md-6" id="secondRow" >
            <div class="row" id="grid02Top"><h3 style="margin-left:250px">Invoice</h3></div>
            <div class="row" id="grid02" >
-               <form class="row g-3" style="font-size: x-small">
+               <form class="row input-group-sm" style="font-size: x-small">
                    <div class="col-md-5">
                        <label for="inputItem" class="form-label">Item :</label>
                        <select id="inputItem" class="form-select">
@@ -150,18 +147,31 @@
            </div>
        </div>
 
-       <div class="col-md-6" id="grid03" >
+       <div class="col-md-6" id="thrdRow" >
+           <div class="row" id="grid04" style="margin-left:250px"><h3>Invoice</h3></div>
            <div class="row">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem cumque debitis, esse expedita facere libero maiores neque nihil nobis nulla quaerat quam, voluptate. Delectus illo praesentium quae veniam voluptatum.</p>
-
+               <form class="row input-group-sm " style="font-size: x-small">
+                   <div class="col-md-6">
+                       <label for="inputCash" class="form-label">Cash :</label>
+                       <input type="text" class="form-control" id="inputCash" placeholder="5000">
+                   </div>
+                   <div class="col-md-6">
+                       <label for="inputDiscount" class="form-label">Discount :</label>
+                       <input type="text" class="form-control" id="inputDiscount" placeholder="10%">
+                   </div>
+                   <div class="col-md-12">
+                       <label for="inputBalance" class="form-label">Balance :</label>
+                       <input type="text" class="form-control" id="inputBalance" placeholder="4055">
+                   </div>
+               </form>
            </div>
        </div>
    </div>
 
    <div class="row" style="border: 1px solid black">
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem cumque debitis, esse expedita facere libero maiores neque nihil nobis nulla quaerat quam, voluptate. Delectus illo praesentium quae veniam voluptatum.</p>
-
    </div>
+
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
