--- a/Order.html
+++ b/Order.html
@@ -113,7 +113,7 @@
    <div class="row" >
        <div class="col-md-6" id="secondRow" >
            <div class="row" id="grid02Top"><h3 style="margin-left:250px">Invoice</h3></div>
-           <div class="row" id="grid02" >
+           <div class="row">
                <form class="row input-group-sm" style="font-size: x-small">
                    <div class="col-md-5">
                        <label for="inputItem" class="form-label">Item :</label>
@@ -169,7 +169,35 @@
    </div>
 
    <div class="row" style="border: 1px solid black">
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab autem cumque debitis, esse expedita facere libero maiores neque nihil nobis nulla quaerat quam, voluptate. Delectus illo praesentium quae veniam voluptatum.</p>
+           <table class="table table-dark table-hover">
+               <thead>
+               <tr>
+                   <th scope="col">#</th>
+                   <th scope="col">First</th>
+                   <th scope="col">Last</th>
+                   <th scope="col">Handle</th>
+               </tr>
+               </thead>
+               <tbody>
+               <tr>
+                   <th scope="row">1</th>
+                   <td>Mark</td>
+                   <td>Otto</td>
+                   <td>@mdo</td>
+               </tr>
+               <tr>
+                   <th scope="row">2</th>
+                   <td>Jacob</td>
+                   <td>Thornton</td>
+                   <td>@fat</td>
+               </tr>
+               <tr>
+                   <th scope="row">3</th>
+                   <td colspan="2">Larry the Bird</td>
+                   <td>@twitter</td>
+               </tr>
+               </tbody>
+           </table>
    </div>
 
 </section>
