--- a/Order.html
+++ b/Order.html
@@ -23,16 +23,16 @@
                     <a class="nav-link active" aria-current="page" href="#">Orders</a>
                 </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <li class="nav-item dropdown" >
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" >
                         Item
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">ADD</a></li>
-                        <li><a class="dropdown-item" href="#">DELETE</a></li>
-                        <li><a class="dropdown-item" href="#">SEARCH</a></li>
+                        <li><a class="dropdown-item" style="color: white" href="#">ADD</a></li>
+                        <li><a class="dropdown-item" style="color: white" href="#">DELETE</a></li>
+                        <li><a class="dropdown-item" style="color: white" href="#">SEARCH</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Any Crud Operations</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="#">MORE</a></li>
                     </ul>
                 </li>
 
@@ -41,11 +41,11 @@
                         Customer
                     </a>
                     <ul class="dropdown-menu" id="dropDownItems">
-                        <li><a class="dropdown-item" href="#">ADD</a></li>
-                        <li><a class="dropdown-item" href="#">DELETE</a></li>
-                        <li><a class="dropdown-item" href="#">SEARCH</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="#">ADD</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="#">DELETE</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="#">SEARCH</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Any Crud Operations</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="#">MORE</a></li>
                     </ul>
                 </li>
 
@@ -63,7 +63,7 @@
 
    <div class="row " id="grid" >
        <div class="col-md-12" style="margin: 10px" id="firstRow">
-           <div class="row"><h3 id="grid03Top">Invoice Details</h3></div>
+           <div class="row" style="background-color: #0003ff"><h3 id="grid03Top">Invoice Details</h3></div>
            <div class="row">
                <form class="row input-group-sm" style="font-size: x-small">
                    <div class="col-md-4">
@@ -111,7 +111,7 @@
 
 
    <div class="row" >
-       <div class="col-md-6" id="secondRow" >
+       <div class="col-md-6" id="secondRow">
            <div class="row" id="grid02Top"><h3>Item Select</h3></div>
            <div class="row">
                <form class="row input-group-sm" style="font-size: x-small">
@@ -174,7 +174,7 @@
 
    <div class="row ">
        <div class="col">
-           <table class="table table-dark table-hover table-sm">
+           <table class="table table-dark table-hover table-sm" style="border: 2px solid white">
                <thead>
                <tr>
                    <th scope="col">Item Code</th>
