set Navigation Part

--- a/Order.html
+++ b/Order.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Thogakade Pos System</title>
-    <meta name="description" content="This is my web page">
     <meta name="viewport" content="width=device-width initial scale=1">
     <link rel="stylesheet" href="assets/bootstarp/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style/basics.css">
@@ -28,11 +27,11 @@
                         Item
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" style="color: white" href="#">ADD</a></li>
-                        <li><a class="dropdown-item" style="color: white" href="#">DELETE</a></li>
-                        <li><a class="dropdown-item" style="color: white" href="#">SEARCH</a></li>
+                        <li><a class="dropdown-item" style="color: white" href="Item.html">ADD</a></li>
+                        <li><a class="dropdown-item" style="color: white" href="Item.html">DELETE</a></li>
+                        <li><a class="dropdown-item" style="color: white" href="Item.html">SEARCH</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item"  style="color: white" href="#">MORE</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="Item.html">MORE</a></li>
                     </ul>
                 </li>
 
@@ -41,11 +40,11 @@
                         Customer
                     </a>
                     <ul class="dropdown-menu" id="dropDownItems">
-                        <li><a class="dropdown-item"  style="color: white" href="#">ADD</a></li>
-                        <li><a class="dropdown-item"  style="color: white" href="#">DELETE</a></li>
-                        <li><a class="dropdown-item"  style="color: white" href="#">SEARCH</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="Customer.html">ADD</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="Customer.html">DELETE</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="Customer.html">SEARCH</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item"  style="color: white" href="#">MORE</a></li>
+                        <li><a class="dropdown-item"  style="color: white" href="Customer.html">MORE</a></li>
                     </ul>
                 </li>
 
