Create Customer Form

--- a/Customer.html
+++ b/Customer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width initial scale=1">
     <link rel="stylesheet" href="assets/bootstarp/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style/basics.css">
+    <link rel="stylesheet" href="assets/fonts/css/all.min.css">
 </head>
 <body>
 
@@ -56,6 +57,22 @@
         </div>
     </div>
 </nav>
+<section class="container-fluid">
+
+    <div class="row" >
+        <div class="col" id="customerGrid01">
+            <h2 style="background-color:blue"> <i class="fa-solid fa-person-military-pointing" style="background-color:blue"></i>CUSTOMER</h2>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+    </div>
+    <div class="row"></div>
+
+</section>
 
 
 
