--- a/Order.html
+++ b/Order.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width initial scale=1">
     <link rel="stylesheet" href="assets/bootstarp/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style/basics.css">
+    <link rel="stylesheet" href="assets/fonts/css/all.min.css">
 
 </head>
 <body>
