--- a/Customer.html
+++ b/Customer.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark" >
+<nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark i" >
     <div class="container-fluid">
         <a class="navbar-brand" href="#">ThogaKade POS System</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,6 +57,7 @@
         </div>
     </div>
 </nav>
+
 <section class="container-fluid">
 
     <div class="row" >
@@ -65,16 +66,75 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col" ><br>
+            <form class="form input-group-lg">
+                <div class="mb-3">
+                    <label for="inputSearch" class="form-label">Search :</label>
+                    <input type="text" class="form-control" id="inputSearch" placeholder="Input Name / NIC / Tp Here">
+                </div>
+                <div>
+                    <label for="selectName" class="form-label">Name :</label>
+                    <select class="form-select" aria-label="Default select example" id="selectName">
+                        <option selected>Open this select Name</option>
+                        <option value="1">Customer 01</option>
+                        <option value="1">Customer 02</option>
+                        <option value="1">Customer 03</option>
+                    </select>
+                </div><br>
+                <button type="submit" class="btn btn-primary" id="btnSearch">SEARCH</button>
+            </form>
+        </div>
+        <div class="col" id="btnCrud"><br>
+            <button type="button" class="btn btn-outline-warning"><i class="fa-solid fa-plus"></i>   SAVE</button>
+            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen-to-square"></i>   UPDATE</button>
+            <button type="button" class="btn btn-outline-success"><i class="fa-regular fa-circle-check"></i>   CLEAR</button>
+            <button type="button" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i>   DELETE</button>
+            <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-arrows-rotate"></i>   REFRESH</button>
+
+        </div>
+    </div>
 
     <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col"><br><br>
+            <table class="table table-dark table-hover " style="border: 2px solid white">
+                <thead>
+                <tr>
+                    <th scope="col">Customer ID</th>
+                    <th scope="col">Customer Name</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Salary</th>
+                    <th scope="col">TP</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">C001</th>
+                    <td>Viraj</td>
+                    <td>20</td>
+                    <td>100000</td>
+                    <td>0777030476</td>
+                </tr>
+                <tr>
+                    <th scope="row">C002</th>
+                    <td>Kamal</td>
+                    <td>25</td>
+                    <td>75000</td>
+                    <td>0774510476</td>
+                </tr>
+                <tr>
+                    <th scope="row">C003</th>
+                    <td>Nimal</td>
+                    <td>26</td>
+                    <td>500000</td>
+                    <td>0755503046</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="row"></div>
 
 </section>
-
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
