--- a/Item.html
+++ b/Item.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width initial scale=1">
     <link rel="stylesheet" href="assets/bootstarp/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style/basics.css">
+    <link rel="stylesheet" href="assets/fonts/css/all.min.css">
 </head>
 <body>
 
@@ -56,7 +57,82 @@
         </div>
     </div>
 </nav>
+<section class="container-fluid">
 
+    <div class="row" >
+        <div class="col" id="ItemGrid01">
+            <h2 style="background-color:blue"> <i class="fa-solid fa-shop" style="background-color: blue"></i>  ITEM</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col" ><br>
+            <form class="form input-group-lg">
+                <div class="mb-3">
+                    <label for="inputSearch" class="form-label">Search :</label>
+                    <input type="text" class="form-control" id="inputSearch" placeholder="Input Item Name / Code Here">
+                </div>
+                <div>
+                    <label for="selectName" class="form-label">Name :</label>
+                    <select class="form-select" aria-label="Default select example" id="selectName">
+                        <option selected>Open this select Item Name</option>
+                        <option value="1">Customer 01</option>
+                        <option value="1">Customer 02</option>
+                        <option value="1">Customer 03</option>
+                    </select>
+                </div><br>
+                <button type="submit" class="btn btn-primary" id="btnSearch">SEARCH</button>
+            </form>
+        </div>
+        <div class="col" id="btnCrud"><br>
+            <button type="button" class="btn btn-outline-warning"><i class="fa-solid fa-plus"></i>   SAVE</button>
+            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen-to-square"></i>   UPDATE</button>
+            <button type="button" class="btn btn-outline-success"><i class="fa-regular fa-circle-check"></i>   CLEAR</button>
+            <button type="button" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i>   DELETE</button>
+            <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-arrows-rotate"></i>   REFRESH</button>
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col"><br><br>
+            <table class="table table-dark table-hover " style="border: 2px solid white">
+                <thead>
+                <tr>
+                    <th scope="col">Item Code</th>
+                    <th scope="col">Item Name</th>
+                    <th scope="col">QTY</th>
+                    <th scope="col">price</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">P001</th>
+                    <td>Keerisamba 5KG</td>
+                    <td>100</td>
+                    <td>500</td>
+
+                </tr>
+                <tr>
+                    <th scope="row">P002</th>
+                    <td>Keerisamba 5KG</td>
+                    <td>100</td>
+                    <td>500</td>
+
+                </tr>
+                <tr>
+                    <th scope="row">P003</th>
+                    <td>Keerisamba 5KG</td>
+                    <td>100</td>
+                    <td>500</td>
+
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</section>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
