--- a/Item.html
+++ b/Item.html
@@ -85,12 +85,11 @@
             </form>
         </div>
         <div class="col" id="btnCrud"><br>
-            <button type="button" class="btn btn-outline-warning"><i class="fa-solid fa-plus"></i>   SAVE</button>
+            <button type="button" class="btn btn-outline-warning"><i class="fa-solid fa-plus" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"></i>   SAVE</button>
             <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen-to-square"></i>   UPDATE</button>
             <button type="button" class="btn btn-outline-success"><i class="fa-regular fa-circle-check"></i>   CLEAR</button>
             <button type="button" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i>   DELETE</button>
             <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-arrows-rotate"></i>   REFRESH</button>
-
         </div>
     </div>
 
@@ -134,8 +133,49 @@
 
 </section>
 
+<div class="saveModel">
+    <div class="modal fade  " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Save Item</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="Item-code" class="col-form-label">Item Code :</label>
+                            <input type="text" class="form-control" id="Item-code">
+                        </div>
+                        <div class="form-group">
+                            <label for="Item-name" class="col-form-label">Item Name :</label>
+                            <input type="text" class="form-control" id="Item-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="price" class="col-form-label">Item Price :</label>
+                            <input type="text" class="form-control" id="price">
+                        </div>
+                        <div class="form-group">
+                            <label for="qty" class="col-form-label">Item Quantity :</label>
+                            <input type="text" class="form-control" id="qty">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 </html>
