--- a/Customer.html
+++ b/Customer.html
@@ -59,7 +59,6 @@
 </nav>
 
 <section class="container-fluid">
-
     <div class="row" >
         <div class="col" id="customerGrid01">
             <h2 style="background-color:blue"> <i class="fa-solid fa-person-military-pointing" style="background-color:blue"></i>CUSTOMER</h2>
@@ -85,15 +84,54 @@
                 <button type="submit" class="btn btn-primary" id="btnSearch">SEARCH</button>
             </form>
         </div>
-        <div class="col" id="btnCrud"><br>
-            <button type="button" class="btn btn-outline-warning" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"><i class="fa-solid fa-plus"></i>   SAVE</button>
-            <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen-to-square"></i>   UPDATE</button>
-            <button type="button" class="btn btn-outline-success"><i class="fa-regular fa-circle-check"></i>   CLEAR</button>
-            <button type="button" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i>   DELETE</button>
-            <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-arrows-rotate"></i>   REFRESH</button>
+
+        <div class="col" ><br>
+            <div class="row">
+                <form class="row input-group-sm" id="customerForm">
+                    <div class="col-md-4">
+                        <label for="customerID" class="form-label">Customer ID :</label>
+                        <input type="text" class="form-control" id="customerID" placeholder="C001">
+                    </div>
+
+                    <div class="col-md-5">
+                        <label for="1" class="form-label">Customer Name :</label>
+                        <input type="text" class="form-control" id="1" placeholder="Full Name">
+                    </div>
+
+                    <div class="col-3">
+                        <label for="customerAge" class="form-label">Age :</label>
+                        <input type="text" class="form-control" id="customerAge" placeholder="20">
+                    </div>
+
+                    <div class="col-md-4">
+                        <label for="inputSalary" class="form-label">Salary :</label>
+                        <input type="text" class="form-control" id="inputSalary" placeholder="12345.00">
+                    </div>
+
+                    <div class="col-8">
+                        <label for="customerTP" class="form-label">TP :</label>
+                        <input type="text" class="form-control" id="customerTP" placeholder="1234 Main St">
+                    </div>
+
+                </form>
+            </div>
+
+            <div class="row" >
+                <div id="btnCrud">
+
+                    <button type="button" class="btn btn-outline-warning" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"><i class="fa-solid fa-plus"></i>   SAVE</button>
+                    <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen-to-square"></i>   UPDATE</button>
+                    <button type="button" class="btn btn-outline-success"><i class="fa-regular fa-circle-check"></i>   Reset</button>
+                    <button type="button" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i>   DELETE</button>
+                    <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-arrows-rotate"></i>   REFRESH</button>
+                </div>
+            </div>
 
         </div>
-    </div>
+
+
+        </div>
+
 
     <div class="row">
         <div class="col"><br><br>
@@ -135,45 +173,6 @@
     </div>
 
 </section>
-
-<div class="saveModel">
-    <div class="modal fade  " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Save Customer</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="customer-id" class="col-form-label">Customer ID :</label>
-                            <input type="text" class="form-control" id="customer-id">
-                        </div>
-                        <div class="form-group">
-                            <label for="Customer-name" class="col-form-label">Customer Name :</label>
-                            <input type="text" class="form-control" id="Customer-name">
-                        </div>
-                        <div class="form-group">
-                            <label for="address" class="col-form-label">Customer Address :</label>
-                            <input type="text" class="form-control" id="address">
-                        </div>
-                        <div class="form-group">
-                            <label for="salary" class="col-form-label">Customer Salary :</label>
-                            <input type="text" class="form-control" id="salary">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
